--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Foldit:wght@100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,700;1,900&family=Rubik:wght@300;500&display=swap" rel="stylesheet">   <title>Video Page</title>
+    <link href="https://fonts.googleapis.com/css2?family=Foldit:wght@100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,700;1,900&family=Rubik:wght@300;500&display=swap" rel="stylesheet">
+    <title>Video Page</title>
     <style>
         body, html {
             margin: 0;
@@ -19,7 +20,7 @@
             align-items: center;
             background-color: black; /* Opcional, para un fondo negro */
         }
-        #waitingScreen {
+        #initialScreen {
             position: absolute;
             top: 0;
             left: 0;
@@ -42,6 +43,24 @@
             50% { background-position: 100% 50%; }
             100% { background-position: 0% 50%; }
         }
+        #waitingScreen {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(-45deg, #030a0d, #2980b9, #14222c, #181818);
+            background-size: 400% 400%;
+            animation: gradient 15s ease infinite;
+            color: white;
+            display: none; /* Inicialmente oculto */
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            flex-direction: column;
+            z-index: 10;
+            font-family: Montserrat, sans-serif;
+        }
         #spinner {
             border: 8px solid rgba(255, 255, 255, 0.1);
             border-top: 8px solid white;
@@ -49,6 +68,7 @@
             width: 50px;
             height: 50px;
             animation: spin 1s linear infinite;
+            margin-bottom: 20px;
         }
         @keyframes spin {
             0% { transform: rotate(0deg); }
@@ -61,12 +81,36 @@
             height: auto;
             z-index: 1;
         }
+        #startButton {
+            background: linear-gradient(45deg, #ffffff, #f1f6fa);
+            border: none;
+            padding: 15px 30px;
+            font-size: 18px;
+            font-family: Montserrat, sans-serif;
+            font-weight: 600;
+            color: rgb(0, 195, 255);
+            cursor: pointer;
+            border-radius: 5px;
+            box-shadow: 0 0 20px rgba(255, 255, 255, 0.2);
+            transition: all 0.3s ease;
+        }
+        #startButton:hover {
+            box-shadow: 0 0 30px rgba(255, 255, 255, 0.6);
+            transform: scale(1.1);
+        }
+        #startButton:active {
+            transform: scale(1.05);
+        }
     </style>
 </head>
 <body>
+    <div id="initialScreen">
+        <p>Prepárate para unirte al evento épico.<br> <b>Haz clic en el botón para comenzar.</b></p>
+        <button id="startButton">¡Unirse al Evento!</button>
+    </div>
     <div id="waitingScreen">
         <div id="spinner"></div>
-        <p>El evento aún no ha comenzado.</br> <b>Por favor, espere...</b></p>
+        <p>El evento aún no ha comenzado.<br> <b>Por favor, espere...</b></p>
     </div>
     <video id="myVideo" muted>
         <source src="demo.mp4" type="video/mp4">
@@ -75,14 +119,23 @@
 
     <script src="/socket.io/socket.io.js"></script>
     <script>
-        document.getElementById('myVideo').controls = false;
-        const socket = io();
         const video = document.getElementById('myVideo');
+        const initialScreen = document.getElementById('initialScreen');
         const waitingScreen = document.getElementById('waitingScreen');
+        const startButton = document.getElementById('startButton');
 
         // Permitir reproducción automática del video en silencio
         video.muted = true;
+        video.controls = false;
 
+        // Manejar el clic en el botón de inicio
+        startButton.addEventListener('click', function() {
+            initialScreen.style.display = 'none';
+            waitingScreen.style.display = 'flex';
+        });
+
+        const socket = io();
+        
         socket.on('command', function(command) {
             console.log("Mensaje recibido del servidor:", command);
             if (command === 'play') {
