--- a/public/index.html
+++ b/public/index.html
@@ -88,7 +88,7 @@
             font-size: 18px;
             font-family: Montserrat, sans-serif;
             font-weight: 600;
-            color: rgb(0, 195, 255);
+            color: #133b55;
             cursor: pointer;
             border-radius: 5px;
             box-shadow: 0 0 20px rgba(255, 255, 255, 0.2);
