--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Foldit:wght@100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,700;1,900&family=Rubik:wght@300;500&display=swap" rel="stylesheet">
-    <title>Video Page</title>
+    <title>Significant demo</title>
     <style>
         body, html {
             margin: 0;
