--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,10 @@
             max-height: 100%;
             width: 100%;
             height: auto;
-            z-index: 1;
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: 1; /* Establecer z-index bajo inicialmente */
             display: none; /* Ocultar el video inicialmente */
         }
         #startButton {
@@ -154,6 +157,7 @@
                 console.log("Ejecutando comando 'play'");
                 waitingScreen.style.display = 'none';
                 video.style.display = 'block'; // Mostrar el video solo cuando se reciba el comando 'play'
+                video.style.zIndex = '11'; // Establecer z-index alto para el video
                 try {
                     video.play().then(() => {
                         console.log('Video started successfully.');
