--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -116,7 +117,7 @@
         <div id="spinner"></div>
         <p>El evento aún no ha comenzado.<br> <b>Por favor, espere...</b></p>
     </div>
-    <video id="myVideo" muted>
+    <video id="myVideo" muted playsinline>
         <source src="demo.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
