--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
             left: 0;
             width: 100%;
             height: 100%;
+            
             background: linear-gradient(-45deg, #030a0d, #2980b9, #14222c, #181818);
             background-size: 400% 400%;
             animation: gradient 15s ease infinite;
@@ -39,6 +40,12 @@
             z-index: 10;
             font-family: Montserrat, sans-serif;
         }
+
+        #initialScreen > p {
+            
+            font-size: 2rem;
+        }
+
         @keyframes gradient {
             0% { background-position: 0% 50%; }
             50% { background-position: 100% 50%; }
@@ -62,6 +69,15 @@
             z-index: 10;
             font-family: Montserrat, sans-serif;
         }
+
+        #waitingScreen > p {
+            font-size: 1rem;
+        }
+
+        #waitingScreen > p > b {
+            font-size: 1.2rem;
+        }
+
         #spinner {
             border: 8px solid rgba(255, 255, 255, 0.1);
             border-top: 8px solid white;
@@ -95,7 +111,7 @@
             font-weight: 600;
             color: #133b55;
             cursor: pointer;
-            border-radius: 5px;
+            border-radius: 2.5rem;
             box-shadow: 0 0 20px rgba(255, 255, 255, 0.2);
             transition: all 0.3s ease;
         }
@@ -106,16 +122,17 @@
         #startButton:active {
             transform: scale(1.05);
         }
+
     </style>
 </head>
 <body>
     <div id="initialScreen">
-        <p>Prepárate para unirte al evento épico.<br> <b>Haz clic en el botón para comenzar.</b></p>
-        <button id="startButton">¡Unirse al Evento!</button>
+        <p><b>Haz clic </br>para acceder.</b></p>
+        <button id="startButton">Unirse</button>
     </div>
     <div id="waitingScreen">
         <div id="spinner"></div>
-        <p>El evento aún no ha comenzado.<br> <b>Por favor, espere...</b></p>
+        <p>El evento aún no ha empezado.<br> <b>¡Mientras tanto, disfruta de la presentación!</b></p>
     </div>
     <video id="myVideo" muted playsinline>
         <source src="demo.mp4" type="video/mp4">
