--- a/public/control.html
+++ b/public/control.html
@@ -91,31 +91,48 @@
 
     <script src="/socket.io/socket.io.js"></script>
     <script>
-        const socket = io();
-        const controlButton = document.getElementById('controlButton');
+        //const socket = io();
+        const controlSocket = io('/control');
+        const videoSocket = io('/video');
         let isPlaying = false;
+        let playFromBeginning = true;
 
-        socket.on('connect', function() {
-            console.log('Conectado al servidor socket.io');
+        controlSocket.on('connect', function() {
+            console.log('Conectado al servidor socket /control');
         });
 
-        socket.on('disconnect', function() {
-            console.log('Desconectado del servidor socket.io');
-        });
+        /*controlSocket.on('disconnect', function() {
+            console.log('Desconectado del servidor socket /control');
+        });*/
 
-        socket.on('userCount', function(count) {
+        controlSocket.on('userCount', function(count) {
             console.log('Número de usuarios conectados:', count);
             document.getElementById('userCount').innerHTML = 'Usuarios conectados: <br> <b>' + count + '</b>';
+        });
+
+        videoSocket.on('videoEnd', function() {
+            console.log('Resettting video');
+            controlButton.textContent = 'Play again!';
+            controlButton.classList.remove('pause');
+            controlButton.classList.add('play');
+            isPlaying = false;
+            playFromBeginning = true;
         });
 
         function togglePlayPause() {
             if (isPlaying) {
                 sendCommand('pause');
-                controlButton.textContent = 'Play';
+                controlButton.textContent = 'Resume';
                 controlButton.classList.remove('pause');
                 controlButton.classList.add('play');
-            } else {
+            } else if (playFromBeginning) {
+                playFromBeginning = false;
                 sendCommand('play');
+                controlButton.textContent = 'Pause';
+                controlButton.classList.remove('play');
+                controlButton.classList.add('pause');
+            } else {
+                sendCommand('resume');
                 controlButton.textContent = 'Pause';
                 controlButton.classList.remove('play');
                 controlButton.classList.add('pause');
@@ -125,7 +142,9 @@
 
         function sendCommand(command) {
             console.log('Enviando comando:', command);
-            socket.emit('command', command);
+            controlSocket.emit('command', command);
+            videoSocket.emit(command);
+            //socket.emit(command);
         }
     </script>
 </body>
